--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-    <title>Document</title>
+        <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <script src="LivingCreature.js"></script>
-    <script src="script.js"></script>
-    <script src="grassEater.js"></script>
-   <script src="class.js"></script>
-   <script src="Predator.js"></script>
-   <script src="Rabit.js"></script>
-   <script src="pacman.js"></script>
 </body>
 </html>
