--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
         <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+    <button id="btn">BUM</button>
+    <button></button>
+    <button></button>
+    <button></button>
+    <button></button>
 </body>
 </html>
