--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
         <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+        
 </head>
 <body>
     <button id="btn">BUM</button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
+    <button id="grn">Garun</button>
+    <button id="amr">Amar</button>
+    <button id="asn">Ashun</button>
+    <button id="dmr">Dzmer</button>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
