--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         
 </head>
 <body>
-    <button id="btn">BUM</button>
-    <button id="grn">Garun</button>
-    <button id="amr">Amar</button>
-    <button id="asn">Ashun</button>
-    <button id="dmr">Dzmer</button>
+    
+    <button id="Spring">Spring</button>
+    <button id="Summer">Summer</button>
+    <button id="Autumn">Autumn</button>
+    <button id="Winter">Winter</button>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
