--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         
 </head>
 <body>
-    
-    <button id="Spring">Spring</button>
-    <button id="Summer">Summer</button>
-    <button id="Autumn">Autumn</button>
-    <button id="Winter">Winter</button>
+    <p id="grass">Grass:</p>
+    <button id="Spring">Spring</button> 
+    <button id="Summer">Summer</button> 
+    <button id="Autumn">Autumn</button> 
+    <button id="Winter">Winter</button> 
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
